--- a/week-07/day-4/src/main/resources/application.properties
+++ b/week-07/day-4/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
 
