--- a/week-07/day-4/src/main/resources/application.properties
+++ b/week-07/day-4/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost/foxclub?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
